--- a/src/app/home/components/input/input.component.html
+++ b/src/app/home/components/input/input.component.html
@@ -1,11 +1,11 @@
 <div class="w-full bg-[#E69500] flex justify-between px-5 py-1">
-  <input
-    class="w-full outline-none bg-[#E69500] placeholder-[#101010]"
-    (keyup.enter)="saveReminder(reminderInput.value)"
-    type="text"
-    placeholder="What do you want to remember?"
-    #reminderInput
-  />
 
-  <fa-icon (click)="saveReminder(reminderInput.value)" [icon]="faPlus"></fa-icon>
+  <shared-input
+    placeholder="What do you want to remember?"
+    (saveInputValue)="saveReminder($event)"
+  ></shared-input>
+
+  <fa-icon
+    [icon]="faPlus"
+  ></fa-icon>
 </div>
