--- a/src/app/home/pages/homePage/homePage.component.html
+++ b/src/app/home/pages/homePage/homePage.component.html
@@ -3,5 +3,5 @@
 <home-card
   *ngFor="let reminder of reminders"
   (onDeleteReminder)="deleteReminder($event)"
-  [title]="reminder.title"
+  [reminder]="reminder"
 ></home-card>
