--- a/src/app/home/components/input/input.component.html
+++ b/src/app/home/components/input/input.component.html
@@ -1,6 +1,7 @@
 <div class="w-full bg-[#E69500] flex justify-between px-5 py-1">
 
   <shared-input
+    class="w-full"
     placeholder="What do you want to remember?"
     (saveInputValue)="saveReminder($event)"
   ></shared-input>
