--- a/src/app/home/pages/homePage/homePage.component.html
+++ b/src/app/home/pages/homePage/homePage.component.html
@@ -1,7 +1,14 @@
-<home-input (addReminder)="addReminder($event)"></home-input>
+<div class="flex flex-col gap-2" >
+  <home-input (addReminder)="addReminder($event)"></home-input>
+  
 
-<home-card
-  *ngFor="let reminder of reminders"
-  (onDeleteReminder)="deleteReminder($event)"
-  [reminder]="reminder"
-></home-card>
+  <div>
+    <home-card
+      *ngFor="let reminder of reminders"
+      (onDeleteReminder)="deleteReminder($event)"
+      [reminder]="reminder"
+    ></home-card>
+  </div>
+
+</div>
+
