--- a/src/app/home/pages/homePage/homePage.component.html
+++ b/src/app/home/pages/homePage/homePage.component.html
@@ -10,6 +10,7 @@
       [cardIndex]="i"
       [reminder]="reminder"
       (onDeleteReminder)="deleteReminder($event)"
+      (onDeleteChildReminder)="deleteChildReminder($event)"
     ></home-card>
   </div>
 
