Now the reminder flow is complete

--- a/src/app/home/components/card/card.component.html
+++ b/src/app/home/components/card/card.component.html
@@ -27,7 +27,7 @@
   <div class="px-8">
     <shared-input
       placeholder="Anything else you would like to remember?"
-      (saveInputValue)="onAddChildSon($event)"
+      (saveInputValue)="onAddChild($event)"
     >
     </shared-input>
     <home-card
