--- a/src/app/home/components/topBar/topBar.component.html
+++ b/src/app/home/components/topBar/topBar.component.html
@@ -1,1 +1,8 @@
-<p>topBar works!</p>,
+<div class="w-full bg-[#E69500] flex justify-between px-5 py-1">
+  <shared-input
+    class="w-full"
+    placeholder="What do you want to remember?"
+    [Icon]="faPlus"
+    (saveInputValue)="saveReminder($event)"
+  ></shared-input>
+</div>
