I have to change the colors

--- a/src/app/home/components/topBar/topBar.component.html
+++ b/src/app/home/components/topBar/topBar.component.html
@@ -1,4 +1,4 @@
-<div class="w-full bg-[#E69500] flex justify-between px-5 py-1">
+<div class="w-full bg-[#FFDD95] flex justify-between px-5 py-1">
   <shared-input
     class="w-full"
     placeholder="What do you want to remember?"
