--- a/src/app/shared/components/input/input.component.html
+++ b/src/app/shared/components/input/input.component.html
@@ -1,6 +1,7 @@
 <div class="flex">
   <input
-    class="w-full outline-none bg-[#E69500] placeholder-[#101010]"
+    class="w-full outline-none bg-[#FFDD95] placeholder-[#101010]"
+    
     type="text"
     (keyup.enter)="saveInput(reminderInput.value)"
     [placeholder]="placeholder"
