--- a/src/app/home/components/card/card.component.html
+++ b/src/app/home/components/card/card.component.html
@@ -1,22 +1,35 @@
-<div class="w-full bg-[#E69500]">
+<div class="w-full bg-[#FFDD95]" [ngClass]="{ 'mt-2': !isChild }">
   <div class="w-full flex justify-between px-5 py-1">
-    <h2
-      class="font-bold cursor-default"
-      [ngClass]="{ 'cursor-pointer': reminder.children?.length !== 0 }"
+    <div
+      class="flex gap-2"
+      [ngClass]="{
+        'cursor-pointer': reminder.children?.length !== 0,
+        'cursor-default': reminder.children?.length === 0
+      }"
       (click)="toggleShowChildren()"
     >
-      {{ reminder.title }}
-    </h2>
+      <h2 class="font-bold">
+        {{ reminder.title }}
+      </h2>
 
-    <div class="flex gap-2">
+      @if (reminder.children?.length !== 0) {
+
+      <fa-icon [icon]="faArrowRight" [ngClass]="{ 'rotate-90': showChildren }">
+      </fa-icon>
+
+      }
+    </div>
+
+    <div class="flex gap-4">
       <fa-icon
         class="cursor-pointer hover:text-red-500"
         (click)="!isChild ? onDelete() : onDeleteChild()"
         [icon]="faTrash"
       ></fa-icon>
+      <fa-icon [icon]="faClipboard"></fa-icon>
       <fa-icon
         class="cursor-pointer hover:text-green-600"
-        (click)="showReminderChildren()"
+        (click)="showAddReminderChild()"
         [icon]="faPlus"
       ></fa-icon>
     </div>
@@ -25,17 +38,22 @@
   @if (showChildren) {
 
   <div class="px-8">
+    @if (showAddChildInput) {
     <shared-input
       placeholder="Anything else you would like to remember?"
       (saveInputValue)="onAddChild($event)"
+      [isChild]="true"
     >
     </shared-input>
+
+    }
+
     <home-card
       *ngFor="let reminder of reminder.children; let i = index"
+      (onDeleteChildReminder)="handleDeleteChild($event)"
       [cardIndex]="i"
       [reminder]="reminder"
       [isChild]="true"
-      (onDeleteChildReminder)="handleDeleteChild($event)"
     ></home-card>
   </div>
 
