now is prettier :)

--- a/src/app/home/components/card/card.component.html
+++ b/src/app/home/components/card/card.component.html
@@ -19,7 +19,7 @@
       }"
       (click)="toggleShowChildren()"
     >
-      <div class="font-light text-sm">
+      <div class="font-light text-sm text-pretty overflow-hidden">
         {{ reminder.title }}
         <fa-icon
           *ngIf="reminder.children?.length !== 0"
