--- a/src/app/shared/components/input/input.component.html
+++ b/src/app/shared/components/input/input.component.html
@@ -1,7 +1,6 @@
-<div class="flex">
+<div class="flex items-center">
   <input
-    class="w-full outline-none bg-secundary placeholder-[#101010]"
-    
+    class="w-full outline-none bg-secundary placeholder-[#101010] placeholder:text-center rounded-sm px-2 py-1 text-black"
     type="text"
     (keyup.enter)="saveInput(reminderInput.value)"
     [placeholder]="placeholder"
