--- a/src/app/home/components/card/card.component.html
+++ b/src/app/home/components/card/card.component.html
@@ -11,7 +11,7 @@
   ></div>
 
   <div class=" flex items-center justify-end min-h-5">
-    <shared-dropdown [items]="dropdownItems" class="hidden dropdown relative" />
+    <shared-dropdown [isOpen]="isDropdownOpen" (toggleDropdown)="toggleDropdown()" [items]="dropdownItems" class="hidden dropdown relative" />
   </div>
 
   <div class="w-full flex justify-between px-5 py-1">
