--- a/src/app/shared/components/Dropdown/Dropdown.component.html
+++ b/src/app/shared/components/Dropdown/Dropdown.component.html
@@ -1,4 +1,4 @@
-<div class="flex gap-1 px-4 pt-4 opacity-50 hover:opacity-100" (click)="emitToggle()" >
+<div class="flex gap-1 opacity-50 hover:opacity-100" (click)="emitToggle()" >
     <div class="h-1 w-1 bg-white  rounded-full "></div>
     <div class="h-1 w-1 bg-white  rounded-full "></div>
     <div class="h-1 w-1 bg-white  rounded-full "></div>
@@ -7,9 +7,9 @@
 
 <div *ngIf="isOpen" class="absolute z-10 bg-white text-black top-6 right-4 px-4 py-2 rounded-sm">
 
-    <label class="hover:bg-[#ccc] w-full flex rounded-sm px-2" (click)="emitToggle()"  *ngFor="let item of items">
+    <label *ngFor="let item of items" class="hover:bg-[#ccc] w-full flex gap-2 rounded-sm px-2" (click)="item.click()"  >
     
-        {{ item.label }}
+        <fa-icon [icon]="item.icon"></fa-icon>  {{ item.label }} 
     
     </label>
 
