--- a/src/app/home/components/card/card.component.html
+++ b/src/app/home/components/card/card.component.html
@@ -11,7 +11,7 @@
     [ngClass]="{ 'bg-green-500': !isChild }"
   ></div>
 
-  <div class="w-full flex justify-between px-5 py-1">
+  <div class="w-full flex justify-between px-5 gap-2 py-1">
     <div
       class="flex gap-2"
       [ngClass]="{
@@ -20,18 +20,26 @@
       }"
       (click)="toggleShowChildren()"
     >
-      <div class="font-light text-sm text-pretty overflow-hidden">
+      <div
+        class="font-light text-sm flex items-center text-pretty overflow-hidden"
+      >
         {{ reminder.title }}
         <fa-icon
+          class="pl-2"
           *ngIf="reminder.children?.length !== 0"
           [icon]="showChildren ? faArrowDown : faArrowRight"
         />
       </div>
     </div>
 
-    <div class="flex flex-col items-center justify-between">
+    <div class="flex flex-col items-center gap-2 justify-between">
       <div class="min-h-1">
-        <shared-dropdown [isOpen]="isDropdownOpen" (toggleDropdown)="toggleDropdown()" [items]="dropdownItems" class="hidden dropdown relative" />
+        <shared-dropdown
+          [isOpen]="isDropdownOpen"
+          (toggleDropdown)="toggleDropdown()"
+          [items]="dropdownItems"
+          class="hidden dropdown relative"
+        />
       </div>
 
       <fa-icon
@@ -39,16 +47,14 @@
         (click)="showAddReminderChild()"
         [icon]="faPlus"
       ></fa-icon>
-
-      <span></span>
-      
     </div>
   </div>
 
   @if (showChildren) {
 
   <div
-    class="p-2 rounded-sm"
+    [@fadeInOut]
+    class="p-2 rounded-sm overflow-hidden"
     [ngClass]="{
       'bg-[#141414]': isEvenChild % 2 === 0,
       'bg-[#25282A]': isEvenChild % 2 !== 0
